css/index.css
html {
  font-family: 'Quicksand', sans-serif;
  scroll-behavior: smooth;
  --main-color: #2056B5;
}

body {
  margin: 0;
  background: white;
}

::selection {
  background-color: var(--main-color);
  color: white;
}

a {
  color: var(--main-color);
  transition: background-color 0.5s ease;
  border-radius: 2px;
}

a:hover {
  background-color: #2057b511;
}

/* ======================================= */
/* CSS Waves, Light & Fish Effects Section */ 
/*     Big thanks to Goodkatz for Waves    */

#waves-bg {
  /* background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%); */
  background: linear-gradient(60deg, rgb(46, 44, 158) 0%, rgb(7, 162, 223) 100%);
  color: white;
}

.waves {
  position: relative;
  width: 100%;
  height: 7.5vh;
  margin-bottom: -7px; /*Fix for safari gap*/
  min-height: 40px;
  max-height: 60px;
}

#light-beams-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  pointer-events: none;
  z-index: 0;
}

.light-beam {
  position: absolute;
  height: calc(var(--height) * 1vh);
  opacity: 0;
  top: 0;
  left: calc(var(--offset) * 1px);
  pointer-events: none;
}

/* Animation */
.parallax > use {
  animation: waves-horizontal 50s cubic-bezier(.55,.5,.45,.5) infinite;
}

.parallax > use:nth-child(1) {
  animation-delay: -4s;
  animation-duration: 14s;
}

.parallax > use:nth-child(2) {
  animation-delay: -6s;
  animation-duration: 20s;
}

.parallax > use:nth-child(3) {
  animation-delay: -8s;
  animation-duration: 26s;
}

.parallax > use:nth-child(4) {
  animation-delay: -10s;
  animation-duration: 40s;
}

@keyframes waves-horizontal {
  0% {
    transform: translate3d(-90px,0,0);
  }
  100% { 
    transform: translate3d(85px,0,0);
  }
}

@media (max-width: 768px) {
  .waves {
    min-height: 30px;
    max-height: 40px;
  }
}

.light-beam {
  animation: beams-fade ease infinite;
  animation-delay: calc(var(--delay) * 1s);
  animation-duration: calc(var(--duration) * 1s);
}

@keyframes beams-fade {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 0.2;
  }
  40% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

.fish {
  position: absolute;
  top: calc(30px + calc(var(--offset-y) * 1px));
  left: calc(var(--start-x) * 1px);
  height: 30px;
  opacity: 0;
}

.fish.animated {
  animation-name: swim;
  animation-timing-function: linear;
  animation-direction: forwards;
  animation-duration: calc(var(--duration) * 1s);
}

.fish.reverse {
  animation-name: swim-reverse;
  animation-direction: reverse;
}

@keyframes swim {
  0% {
    opacity: 0;
    transform: none;
  }
  40%, 60% {
    opacity: 0.05;
  }
  100% {
    opacity: 0;
    transform: translateX(500%);
  }
}

@keyframes swim-reverse {
  0% {
    opacity: 0;
    transform: scaleX(-1);
  }
  40%, 60% {
    opacity: 0.1;
  }
  100% {
    opacity: 0;
    transform: translateX(400%) scaleX(-1);
  }
}

/* End CSS Waves, Light & Fish styles */
/* ================================== */

h1 {
  margin: 0;
}

.navlink, #main-logo {
  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  color: white;
}

#header {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 2rem;
  position: relative;
  overflow: hidden;
  z-index: 1;
}

#logo {
  margin-right: 0.5rem;
}

#navbar {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.navlink {
  text-transform: uppercase;
  margin-left: 1rem;
  cursor: pointer;

  /* The following all exist to override ugly button styles: */
  font-family: 'Quicksand', sans-serif;
  color: white;
  background: none;
  border: none;
  font-size: medium;
  padding: 0;
  transition: opacity 0.2s ease;
}

.navlink.active {
  text-decoration: rgba(255, 255, 255, 0.8) underline;
  text-underline-offset: 0.1rem;
}

@media (max-width: 950px) {
  .navlink {
    font-size: smaller;
    margin-left: 0.75rem;
  }
}

#navbutton {
  display: none;
  /* override button default */
  background: none;
  border: none;
  padding: 0;
  /* ======================= */
  cursor: pointer;
  transition: opacity 0.2s ease;
}

#navbutton:hover, .navlink:hover {
  opacity: 0.75;
}

#mobile-menu {
  position: fixed;
  z-index: 2;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  
  display: none; /* flex */
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: rgba(0, 0, 0, 0.6);
  padding-bottom: 20%;

  visibility: hidden;
  opacity: 0;
  transform: translateY(-100%);
  transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
}

#mobile-menu.active {
  visibility: visible;
  opacity: 1;
  transform: translateY(0);
  backdrop-filter: blur(3px);
}

#mobile-menu .navlink {
  font-size: large;
  margin-bottom: 2rem;
}

.hint {
  color: rgb(78, 78, 78);
  font-size: 14px;
  margin: 0;
}

.mobile {
  display: none;
}

@media (max-width: 820px) {
  #header {
    padding: 0.5rem 1rem;
  }

  #navbar, .desktop {
    display: none !important;
  }

  #navbutton {
    display: block;
  }

  #mobile-menu {
    display: flex;
  }

  .mobile {
    display: unset;
  }

  .hint {
    font-size: 12px;
  }

  .profile-desc {
    font-size: 16px;
  }
}

.page-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: min(2rem, 4vh) min(4rem, 8vw);
}

.page-content > p {
  max-width: 60rem;
}

h1 {
  max-width: 50rem;
  text-align: center;
}

/* ================== */
/* Page Footer Styles */

#footer {
  position: relative;
  margin: 75px 0;
}

.divider {
  position: absolute;
  top: 0;
  left: 25%;
  right: 25%;
  height: 1px;
  background-color: #eee
}

#footer-links {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.footer-link {
  color: #1a1b1f;
  opacity: 0.5;
  transition: opacity 0.2s ease;
  font-size: smaller;
  margin: 2rem min(2rem, 2.5vw);

  text-decoration: none;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.footer-link:hover {
  opacity: 1;
}

.tiny-logo {
  margin: 0 0.5rem;
}

/* End Footer Styles */
/* ================= */

.under-construction-banner {
  position: relative;
  width: 60%;
  overflow: hidden;
  margin-top: 5rem;
}

.under-construction-svg {
  height: max(60px, 10vh);
  animation: ucs-scroll 8s linear infinite alternate;
}

@keyframes ucs-scroll {
  0% {
    transform: none;
  }
  100% {
    transform: translateX(-85px);
  }
}

.under-construction-text {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.75;
  text-align: center;
}

@media (max-width: 768px) {
  .under-construction-banner {
    width: 85%;
  }
}

/* ================ */
/* Team Page Styles */
#team.page-content {
  margin-right: 0;
  margin-left: 0;
}

#team-mobile-view {
  margin-top: 25px;
  padding: 0 5vw;
}

#team-container {
  display: flex;
  flex-direction: row;
  position: relative;
  width: min(60vw, 1000px);
  margin-top: 30px;
}

@media (max-width: 1250px) {
  #team-container {
    width: min(80vw, 1000px);
  }
}

.team-card {
  position: absolute;
  top: 50px;
  width: 100%;
  display: flex;
  flex-direction: row;
  height: max(15vw, 22.5vh);
}

.team-card-mobile {
  position: relative; 
  margin-bottom: 20px; 
  margin-top: 15px; 
  display: flex;
  flex-direction: column;
  height: unset;
}

.team-card-mobile.inverse {
  align-items: flex-end;
}

.arrow-button {
  position: absolute;
  height: 4vw; width: 4vw;
  right: -5vw;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  transition: opacity 0.2s, transform 0.2s;
}
.arrow-button.inverse {
  right: unset;
  left: -5vw;
  transform: translateY(-50%) scaleX(-1);
}

.arrow-button:hover {
  opacity: 0.7;
  transform: translateY(-50%) translateX(5%);
}
.arrow-button.inverse:hover {
  transform: translateY(-50%) translateX(-5%) scaleX(-1);
}

.profile-icon {
  width: max(15vw, 22.5vh);
  height: max(15vw, 22.5vh);
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.profile-desc {
  overflow-y: scroll;
  background-color: #fbfbfb;
  border: solid 1px #e7e7e7;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  padding: min(2rem, 4vw);
  margin: 0;
}

@media (max-width: 820px) {
  .profile-icon {
    border-radius: 0;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }
  
  .profile-desc {
    border-bottom-left-radius: 10px;
    font-size: 14px;
  }
  
  .inverse > .profile-desc {
    border-top-right-radius: 0;
    border-top-left-radius: 10px;
  }
}

/* .profile-desc { */
  /* -ms-overflow-style: none;   */
  /* Internet Explorer 10+ */
  /* scrollbar-width: none;   */
  /* Firefox */
/* } */
/* .profile-desc::-webkit-scrollbar {  */
  /* display: none;   */
  /* Safari and Chrome */
/* } */

.mini-waves {
  position: relative;
  width: 100%;
  height: max(20vw, 30vh);
  max-height: unset;
  transition: transform 1s cubic-bezier(0,.7,.6,1);
}

.mini-waves.down {
  transform: translateY(100%);
  transition: transform 1s cubic-bezier(.7,0,1,.6);
}

.team-page-waves > use {
  transition: x 1s;
}

.down > .team-page-waves > use:nth-child(1) {
  x: -20px;
}

.down > .team-page-waves > use:nth-child(2) {
  x: 20px
}

.down > .team-page-waves > use:nth-child(3) {
  x: 10px;
}

.down > .team-page-waves > use:nth-child(4) {
  x: -30px;
}

/* End Team Styles */
/* =============== */

.hidden {
  display: none;
}

/* ================ */
/* News Post Styles */

.news-post, #full-post {
  position: relative;
  text-align: left;
  margin: 1em 1em;
  border-radius: 0.5em;
  background-color: #FBFBFB;
  border: solid 1px #F7F7F7;
}

.news-post {
  max-width: 45em;
  padding: 0.25em 1em 1em 1em;
  transition: border 0.5s ease;
}

#full-post {
  max-width: 70em;
  padding: 0.5em 1em 1em 1em;
}

.news-post:hover {
  border: solid 1px #e7e7e7;
  cursor: pointer;
}

.news-post h3, #full-post h3 {
  width: calc(100% - 4em);
  margin: 0;
}

.news-post span, #full-post span {
  position: absolute;
  top: 0.5em;
  right: 1em;
  font-size: small;
  opacity: 0.75;
}

#post-img {
  width: 50%;
  height: 50%;
  max-width: 25em;
  max-height: 25em;
  border-radius: 5px;
  border: solid 1px #F7F7F7;
}

#post-img-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

#back-link {
  cursor: pointer;
  text-decoration: underline;
}

#post-link {
  float: right;
}

